fix: removed depreated Base64 encoder, and Base64 decoder